--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "expo": "^42.0.0",
+    "expo-linear-gradient": "~9.2.0",
     "expo-splash-screen": "~0.11.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
