--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "expo-linear-gradient": "*",
     "husky": "^6.0.0",
     "jest": "^26.0.1",
     "lodash": "^4.17.21",
@@ -71,7 +72,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "expo-linear-gradient": "*"
   },
   "jest": {
     "preset": "react-native",
