--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-floating-tag-button-example",
-  "description": "Example app for react-native-floating-tag-button",
+  "name": "react-native-expo-swipe-button-example",
+  "description": "Example app for react-native-expo-swipe-button",
   "version": "0.0.1",
   "private": true,
   "main": "index",
@@ -12,22 +12,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "expo": "^42.0.0",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-splash-screen": "~0.11.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "@expo/vector-icons": "13.0.0",
+    "expo": "46.0.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-splash-screen": "~0.16.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-expo-swipe-button": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "7.18.6",
     "@babel/runtime": "^7.9.6",
-    "@types/react": "~16.9.35",
+    "@types/react": "~18.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "8.3.0",
-    "expo-cli": "^4.0.13"
+    "babel-preset-expo": "~9.2.0",
+    "expo-cli": "^6.0.6"
   }
 }
